--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
 PORT=3000
-MONGO_URI=mongodb+srv://db-Test:test123@cluster0.jsigv.mongodb.net/nodejs-app?retryWrites=true&w=majority
-GOOGLE_CLIENT_ID=397909578883-a8oijf3tbq14ei1fcdfhmc0cnvhap4i8.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+MONGO_URI=xxxxx
+GOOGLE_CLIENT_ID=xxxxx
+GOOGLE_CLIENT_SECRET=xxxxx
